6787106: Hotspot 32 bit build fails on platforms having different definitions for intptr_t & int32_t

Avoid casting between int32_t and intptr_t specifically for MasmAssembler::movptr in 32 bit platforms.

Reviewed-by: jrose, kvn